'chat-emoji-keyboard-option-complete'

--- a/src/style.scss
+++ b/src/style.scss
@@ -313,7 +313,7 @@
             cursor: pointer;
           }
 
-          button {
+          .button-style {
             border: none;
             padding: 10px 15px;
             color: white;
