--- a/src/style.scss
+++ b/src/style.scss
@@ -148,8 +148,9 @@
             background-color: #8da4f1;
             color: #ddddf7;
             font-size: 14px;
-            padding: 6px 14px;
+            padding: 10px 15px;
             border: none;
+            border-radius: 10px 0 10px 10px;
             cursor: pointer;
             @include tablet {
               position: absolute;
@@ -329,6 +330,7 @@
             color: white;
             background-color: #8da4f1;
             cursor: pointer;
+            border-radius: 10px 0 10px 10px;
           }
         }
       }
